--- a/roles/thebeast/vars/main.yml
+++ b/roles/thebeast/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 ansible_python_interpreter: /usr/bin/python2
 username: hank
-userpasswd: $6$5KysWbzw$jDZrsdhKJb.7zaAxT8p8PDF0AyK5ky4IQKtu0LSlusnjB8Quqve5FTmI6wTr2Dyh4IXr60jazYvrd8q.brHyz.
+userpasswd: $6$eEnlCIf6Ldw$mNV2U37NP2syp/I8042FaWOvS.DxcJSYRq3Zw9l8dTEBPxRx.1mQVLTB5N1vO/E40oXcGMli9pXKSksUlnIB9/
