--- a/roles/archangel/tasks/user.yml
+++ b/roles/archangel/tasks/user.yml
@@ -1,17 +1,15 @@
 ---
 - name: install sudo
   pacman: name=sudo
-  tags: bootstrap
 
 - name: create normal user
   user: name={{ username }} createhome=yes group=users groups=wheel
-  tags: bootstrap
+    password={{userpasswd}}
 
 - name: add user to sudoers
   template: src=sudoers
     dest=/etc/sudoers.d/10_{{ username }}
     validate='visudo -cf %s'
-  tags: bootstrap
 
 - name: change user shell
   command: chsh -s /bin/zsh "{{ username }}"
