--- a/roles/thebeast/tasks/main.yml
+++ b/roles/thebeast/tasks/main.yml
@@ -1,11 +1,4 @@
 ---
 - include: pacman.yml
-- include: user.yml
-
-- include: zsh.yml
   become: yes
-  become_user: "{{ username }}"
-
-- include: vim.yml
-  become: yes
-  become_user: "{{ username }}"
+  become_user: root
