--- a/roles/archangel/vars/main.yml
+++ b/roles/archangel/vars/main.yml
@@ -1,3 +1,4 @@
 ---
 ansible_python_interpreter: /usr/bin/python2
-username: arch
+username: hank
+userpasswd: $6$eEnlCIf6Ldw$mNV2U37NP2syp/I8042FaWOvS.DxcJSYRq3Zw9l8dTEBPxRx.1mQVLTB5N1vO/E40oXcGMli9pXKSksUlnIB9/
