--- a/roles/thebeast/tasks/pacman.yml
+++ b/roles/thebeast/tasks/pacman.yml
@@ -1,17 +1,6 @@
 ---
-- name: perform full upgrade
-  pacman: update_cache=yes upgrade=yes
-
 - name: install packages
   pacman: name={{ item }}
   tags: packages
   with_items:
-    - ack
-    - ctags
-    - curl
-    - git
-    - openssh
-    - ruby
-    - vim
-    - wget
-    - zsh
+    - docker
