add user to docker; reboot machine

--- a/roles/thebeast/tasks/nginx-proxy.yml
+++ b/roles/thebeast/tasks/nginx-proxy.yml
@@ -3,8 +3,7 @@
   docker:
     name: nginx-proxy
     image: jwilder/nginx-proxy
+    ports: 80:80
     state: started
-    expose:
-      - 80
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
