--- a/roles/archangel/tasks/user.yml
+++ b/roles/archangel/tasks/user.yml
@@ -3,7 +3,10 @@
   pacman: name=sudo
 
 - name: create normal user
-  user: name={{ username }} createhome=yes group=users groups=wheel
+  user: name={{ username }}
+    createhome=yes
+    group=users
+    groups=wheel
     password={{userpasswd}}
 
 - name: add user to sudoers
@@ -14,3 +17,6 @@
 - name: change user shell
   command: chsh -s /bin/zsh "{{ username }}"
 
+- name: add authorized key
+  authorized_key: user={{ username }}
+    key="{{ lookup('file', '/home/vagrant/.ssh/id_rsa.pub') }}"
