--- a/roles/thebeast/tasks/docker.yml
+++ b/roles/thebeast/tasks/docker.yml
@@ -19,4 +19,19 @@
     enabled=yes
     state=started
 
-# TODO reboot system
+- name: add user to docker group
+  user: name={{ username }}
+    groups=docker
+    append=yes
+
+- name: restart the machine
+  shell: reboot
+  async: 0
+  poll: 0
+  ignore_errors: true
+
+- name: wait for the machine to come back online
+  local_action: wait_for host={{ inventory_hostname }}
+    search_regex=OpenSSH
+    port={{ ansible_port }}
+    timeout=300
