roles should be more generic and based on use cases

--- a/archangel.yml
+++ b/archangel.yml
@@ -2,4 +2,7 @@
 - hosts: archangel
   remote_user: vagrant
   roles:
-    - archangel
+    - common
+    - vagrantbox
+    - development
+    - ruby
