--- a/roles/development/tasks/pacman.yml
+++ b/roles/development/tasks/pacman.yml
@@ -4,8 +4,8 @@
 
 - name: install packages
   pacman: name={{ item }}
-  tags: packages
   with_items:
     - dos2unix
-    - ruby
+    - htop
+    - tree
     - zsh
