--- a/roles/webapps/tasks/biscuitman.yml
+++ b/roles/webapps/tasks/biscuitman.yml
@@ -4,6 +4,7 @@
     name: biscuitman
     image: aliencyborg/biscuitman-nginx
     expose: 80
+    pull: always
     state: reloaded
     env:
       VIRTUAL_HOST: www.biscuitmanchicago.com
