--- a/roles/development/tasks/node.yml
+++ b/roles/development/tasks/node.yml
@@ -1,9 +1,7 @@
 ---
-- name: perform full upgrade
-  pacman: update_cache=yes upgrade=yes
-
 - name: install packages
   pacman: name={{ item }}
+    update_cache=yes
   with_items:
     - nodejs
     - npm
