--- a/roles/development/tasks/ruby.yml
+++ b/roles/development/tasks/ruby.yml
@@ -1,8 +1,6 @@
 ---
-- name: perform full upgrade
-  pacman: update_cache=yes upgrade=yes
-
 - name: install packages
   pacman: name={{ item }}
+    update_cache=yes
   with_items:
     - ruby
