--- a/roles/development/tasks/pacman.yml
+++ b/roles/development/tasks/pacman.yml
@@ -23,4 +23,4 @@
 - name: install yaourt
   become: yes
   become_user: "{{ username }}"
-  include: aur.yml pkg_name=package-query
+  include: aur.yml pkg_name=yaourt
