docker and watchman for development

--- a/roles/development/tasks/main.yml
+++ b/roles/development/tasks/main.yml
@@ -30,3 +30,16 @@
   become_user: "{{ username }}"
   tags:
     - vim
+
+- include: watchman.yml
+  become: yes
+  become_user: "{{ username }}"
+  tags:
+    - watchman
+
+- include: docker.yml
+  become: yes
+  become_user: root
+  tags:
+    - docker
+
