add common packages

--- a/roles/common/tasks/pacman.yml
+++ b/roles/common/tasks/pacman.yml
@@ -8,9 +8,11 @@
     - ack
     - ctags
     - curl
+    - emacs
     - git
     - htop
     - openssh
+    - reflector
     - tmux
     - vim
     - wget
