--- a/roles/development/tasks/haskell.yml
+++ b/roles/development/tasks/haskell.yml
@@ -4,6 +4,11 @@
   become_user: "{{ username }}"
   include: aur.yml pkg_name=libtinfo
 
+- name: install wkhtmltopdf-static
+  become: yes
+  become_user: "{{ username }}"
+  include: aur.yml pkg_name=wkhtmltopdf-static
+
 - name: install packages
   pacman: name={{ item }}
     update_cache=yes
