--- a/roles/metal/tasks/main.yml
+++ b/roles/metal/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
 - include: user.yml
   become: yes
-  become_user: root
+  become_method: sudo
+  tags:
+    - user
+
+- include: host.yml
+  become: yes
+  become_method: sudo
+  tags:
+    - host
