--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -2,8 +2,13 @@
 - include: docker.yml
   become: yes
   become_user: root
+  tags:
+    - docker
+    - webserver
 
 - include: nginx-proxy.yml
   become: yes
   become_user: root
-
+  tags:
+    - docker
+    - webserver
