--- a/roles/webapps/tasks/main.yml
+++ b/roles/webapps/tasks/main.yml
@@ -5,3 +5,10 @@
   tags:
     - docker
     - webapp
+
+- include: bombaybreakdown.yml
+  become: yes
+  become_user: root
+  tags:
+    - docker
+    - webapp
