laptop networking first try

--- a/roles/laptop/tasks/main.yml
+++ b/roles/laptop/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
 - include: pacman.yml
+  become: yes
   tags:
     - packages
+
+- include: network.yml
+  become: yes
+  tags:
+    - network
+  notify: restart network
