--- a/host_vars/warlock.yml
+++ b/host_vars/warlock.yml
@@ -2,5 +2,5 @@
 ansible_python_interpreter: /usr/bin/python2
 hostname: Warlock
 username: brosas
-#userpasswd: $6$eEnlCIf6Ldw$mNV2U37NP2syp/I8042FaWOvS.DxcJSYRq3Zw9l8dTEBPxRx.1mQVLTB5N1vO/E40oXcGMli9pXKSksUlnIB9/
 userpasswd: $1$Dumk2TJT$VDje0trMK1wv0N0D1HzAC1
+wired_adapter: enp0s25
