--- a/roles/laptop/tasks/network.yml
+++ b/roles/laptop/tasks/network.yml
@@ -3,11 +3,21 @@
   service: name=systemd-networkd
    enabled=yes
 
-- name: enable resolved
-  service: name=systemd-resolved
-   enabled=yes
-
 - name: configure wired network adapter
   template: src=wired.network
     dest=/etc/systemd/network/wired.network
   notify: restart network
+
+- name: check resolv.conf
+  stat: path=/etc/resolv.conf
+  register: resolvconf
+
+- name: delete resolv.conf if not a link
+  file: path=/etc/resolv.conf
+    state=absent
+  when: resolvconf.stat.islink is defined and resolvconf.stat.islnk == False
+
+- name: link systemd to resolv.conf
+  file: src=/run/systemd/resolve/resolv.conf
+    dest=/etc/resolv.conf
+    state=link
