--- a/roles/development/tasks/pacman.yml
+++ b/roles/development/tasks/pacman.yml
@@ -15,6 +15,8 @@
 - name: install aur packages
   include: aur.yml pkg_name={{ item }}
   with_items:
-    - aws-cli
+    #- aws-cli
     - package-query
     - yaourt
+  tags:
+    - aur
