--- a/roles/metal/tasks/user.yml
+++ b/roles/metal/tasks/user.yml
@@ -14,6 +14,6 @@
     dest=/etc/sudoers.d/10_{{ username }}
     validate='visudo -cf %s'
 
-- name: add authorized key
-  authorized_key: user={{ username }}
-    key="{{ lookup('file', '/home/vagrant/.ssh/id_rsa.pub') }}"
+#- name: add authorized key
+  #authorized_key: user={{ username }}
+    #key="{{ lookup('file', '/home/vagrant/.ssh/id_rsa.pub') }}"
