--- a/roles/laptop/files/synaptics.conf
+++ b/roles/laptop/files/synaptics.conf
@@ -34,6 +34,7 @@ Section "InputClass"
         Driver "synaptics"
         MatchIsTouchpad "on"
         MatchDevicePath "/dev/input/event*"
-        Option "VertScrollDelta" "-111"
-        Option "HorizScrollDelta" "-111"
+        Option "HorizScrollDelta"     "-111"
+        Option "VertScrollDelta"      "-111"
+        Option "HorizTwoFingerScroll" "on"
 EndSection
