--- a/roles/development/tasks/haskell.yml
+++ b/roles/development/tasks/haskell.yml
@@ -7,7 +7,9 @@
 
 - name: install packages
   pacman: name={{ item }}
-    update_cache=yes
   with_items:
     - ghc
     - stack
+  tags:
+    - packages
+    - pacman
