--- a/roles/development/tasks/node.yml
+++ b/roles/development/tasks/node.yml
@@ -1,7 +1,9 @@
 ---
 - name: install packages
   pacman: name={{ item }}
-    update_cache=yes
+  tags:
+    - packages
+    - pacman
   with_items:
     - nodejs
     - npm
