--- a/roles/development/tasks/node.yml
+++ b/roles/development/tasks/node.yml
@@ -17,3 +17,20 @@
     - jscs
     - jshint
     - npm-check-updates
+
+- name: clone nvm
+  become_user: "{{ username }}"
+  git: repo=https://github.com/creationix/nvm.git
+    dest=~/.nvm
+
+- name: set NVM_DIR in .zshrc
+  become_user: "{{ username }}"
+  lineinfile: dest=~/.zshrc
+    regexp='export NVM_DIR'
+    line='export NVM_DIR="$HOME/.nvm"'
+
+- name: source nvm in .zshrc
+  become_user: "{{ username }}"
+  lineinfile: dest=~/.zshrc
+    regexp='nvm\.sh'
+    line='[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"'
