--- a/roles/development/tasks/node.yml
+++ b/roles/development/tasks/node.yml
@@ -1,6 +1,8 @@
 ---
 - name: install packages
   pacman: name={{ item }}
+  become: yes
+  become_method: sudo
   tags:
     - packages
     - pacman
@@ -9,28 +11,17 @@
     - npm
     - phantomjs
 
-- name: install global node modules
-  npm: name={{ item }} global=yes
-  with_items:
-    - bower
-    - httpster
-    - jscs
-    - jshint
-    - npm-check-updates
-
 - name: clone nvm
-  become_user: "{{ username }}"
   git: repo=https://github.com/creationix/nvm.git
     dest=~/.nvm
+    update=no
 
 - name: set NVM_DIR in .zshrc
-  become_user: "{{ username }}"
   lineinfile: dest=~/.zshrc
     regexp='export NVM_DIR'
     line='export NVM_DIR="$HOME/.nvm"'
 
 - name: source nvm in .zshrc
-  become_user: "{{ username }}"
   lineinfile: dest=~/.zshrc
     regexp='nvm\.sh'
     line='[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"'
