--- a/roles/metal/tasks/host.yml
+++ b/roles/metal/tasks/host.yml
@@ -2,6 +2,9 @@
 - name: set hostname
   hostname: name={{ hostname }}
 
+- name: ensure /etc/hosts exists
+  file: path=/etc/hosts state=touch
+
 - name: add hostname to /etc/hosts
   lineinfile: dest=/etc/hosts regexp='^127\.0\.0\.1'
     line='127.0.0.1 localhost.localdomain localhost {{ hostname }}'
