take docker tag off all over the place

--- a/roles/webapps/tasks/cooperage.yml
+++ b/roles/webapps/tasks/cooperage.yml
@@ -41,7 +41,7 @@
 - name: cooperage web
   docker:
     name: cooperage-web
-    image: aliencyborg/cooperage-web
+    image: aliencyborg/cooperage-web:latest
     expose: 80
     pull: always
     state: reloaded
