--- a/roles/development-suse/tasks/docker.yml
+++ b/roles/development-suse/tasks/docker.yml
@@ -3,3 +3,8 @@
   user: name={{ username }}
     groups=docker
     append=yes
+
+- name: enable docker service
+  service: name=docker
+    enabled=yes
+    state=started
