--- a/roles/webapps/tasks/main.yml
+++ b/roles/webapps/tasks/main.yml
@@ -32,6 +32,7 @@
   become_user: root
   tags:
     - sudoscience
+    - ghost
     - webapp
 
 - include: afsheen-fatemi.yml
@@ -39,4 +40,5 @@
   become_user: root
   tags:
     - afsheenfatemi
+    - ghost
     - webapp
