always pull ghost-data container

--- a/roles/webapps/tasks/afsheen-fatemi.yml
+++ b/roles/webapps/tasks/afsheen-fatemi.yml
@@ -21,6 +21,7 @@
   docker:
     name: afsheen-fatemi-blog-data
     image: aliencyborg/ghost-data
+    pull: always
     state: present
 
 - name: afsheen-fatemi blog
