nginx stuff mainly

--- a/roles/webapps/tasks/biscuitman.yml
+++ b/roles/webapps/tasks/biscuitman.yml
@@ -1,10 +1,22 @@
 ---
 - name: pull and run biscuitman
-  docker:
+  docker_container:
     name: biscuitman
     image: aliencyborg/biscuitman-web
-    expose: 80
-    pull: always
-    state: reloaded
+    pull: true
+    state: started
+    restart: yes
     env:
-      VIRTUAL_HOST: 'biscuitmanchicago.com,*.biscuitmanchicago.com'
+      LETSENCRYPT_EMAIL: 'thealiencyborg@gmail.com'
+      LETSENCRYPT_HOST: 'biscuitmanchicago.com,www.biscuitmanchicago.com'
+      VIRTUAL_HOST: 'biscuitmanchicago.com,www.biscuitmanchicago.com'
+
+- name: pull and run biscuitman-test
+  docker_container:
+    name: biscuitman-test
+    image: aliencyborg/biscuitman-test
+    pull: true
+    state: started
+    restart: yes
+    env:
+      VIRTUAL_HOST: 'bm.aliencyb.org'
