--- a/roles/webapps/tasks/afsheen-fatemi.yml
+++ b/roles/webapps/tasks/afsheen-fatemi.yml
@@ -43,5 +43,7 @@
       DB_USER: afsheenfatemi
       NODE_ENV: production
       URL: http://blog.afsheenfatemi.com
-      VIRTUAL_HOST: 'blog.afsheenfatemi.com,*.afsheenfatemi.com'
+      VIRTUAL_HOST: 'blog.afsheenfatemi.com'
+      LETSENCRYPT_HOST: 'blog.afsheenfatemi.com'
+      LETSENCRYPT_EMAIL: 'thealiencyborg@gmail.com'
 
