--- a/roles/webserver/tasks/docker-gen.yml
+++ b/roles/webserver/tasks/docker-gen.yml
@@ -1,35 +1,14 @@
 ---
-- name: ensure the nginx-certs directory is present
-  file: path=~/nginx-certs
-    state=directory
-
-- name: ensure the nginx-conf directory is present
-  file: path=~/nginx-conf
-    state=directory
-
-- name: ensure the nginx-templates directory is present
-  file: path=~/nginx-templates
-    state=directory
-
-- name: copy default.conf to nginx-conf
-  copy: src=default.conf
-    dest=~/nginx-conf/
-    force=yes
-
-- name: copy nginx.tmpl to nginx-templates
-  copy: src=nginx.tmpl
-    dest=~/nginx-templates/
-    force=yes
-
-- name: run nginx docker container
-  command: "docker run -d -p 80:80 --name nginx
-    -v ~/nginx-conf:/etc/nginx/conf.d -t nginx"
-
 - name: run docker-gen container
-  command: "docker run -d --name docker-gen --volumes-from nginx
-  -v /var/run/docker.sock:/tmp/docker.sock:ro
-  -v ~/nginx-templates:/etc/docker-gen/templates
-  -v ~/nginx-certs:/etc/nginx/certs
-  -t jwilder/docker-gen -notify-sighup nginx -watch -only-exposed
-  /etc/docker-gen/templates/nginx.tmpl
-  /etc/nginx/conf.d/default.conf"
+  docker_container:
+    name: docker-gen
+    image: jwilder/docker-gen
+    pull: true
+    state: started
+    restart: true
+    volumes:
+      - /usr/local/etc/nginx/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+    volumes_from:
+      - nginx-public
+    entrypoint: "/usr/local/bin/docker-gen -notify-sighup nginx-public -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf"
