--- a/roles/webapps/tasks/wastenot-api.yml
+++ b/roles/webapps/tasks/wastenot-api.yml
@@ -31,19 +31,11 @@
       DB_PASSWORD: wastenot_prod
       DB_PORT: 5432
       DB_USER: wastenot_prod
+      #LETSENCRYPT_EMAIL: 'thealiencyborg@gmail.com'
+      #LETSENCRYPT_HOST: 'api.wastenotcompost.com'
       MIX_ENV: prod
       PORT: 80
       POSTGRES_DB: wastenot_prod
       SECRET_KEY_BASE: \
         MenagNznWdCpn3T0+V7VELazp71cx2MIyctOmgJ5x15BkLSO8GhMu666d2DpJX7t
       VIRTUAL_HOST: 'api.wastenotcompost.com'
-
-- name: wastenot web
-  docker_container:
-    name: wastenot-web
-    image: aliencyborg/wastenot-web
-    pull: true
-    state: started
-    restart: yes
-    env:
-      VIRTUAL_HOST: 'wastenotcompost.com,www.wastenotcompost.com'
